--- a/css/src/main.scss
+++ b/css/src/main.scss
@@ -122,6 +122,7 @@ header {
 
 	.half.right.first {
 		padding: 30px 10px;
+		text-align: center;
 
 		@include respond-to( 1024px ) {
 			padding: 30px;
